logs/julep.log
Listing '.'...
Listing './bin'...
Compiling './bin/julep-server.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Julep-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/julep'...
Listing './lib/python3.5/site-packages/julep/bin'...
Compiling './lib/python3.5/site-packages/julep/config.py'...
***   File "./lib/python3.5/site-packages/julep/config.py", line 94
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/julep/master.py'...
***   File "./lib/python3.5/site-packages/julep/master.py", line 49
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/julep/preload.py'...
***   File "./lib/python3.5/site-packages/julep/preload.py", line 24
    print "preload_django"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/julep/server.py'...
***   File "./lib/python3.5/site-packages/julep/server.py", line 63
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
